--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.1"
+  },
+  "dependencies": {
+    "@hubspot/api-client": "^8.9.0"
   }
 }
